feat: Add Google Generative AI SDK
Integrates the `@google/genai` package to enable future AI-powered features within the Pharmacy Analytics platform.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@google/genai": "^0.14.0",
     "@types/jspdf": "^2.0.0",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.66",
